# data-for-press-release-2026-05-08

./: .gitignore  .public-allowlist  ABSTRACTIONS.md  AGENTS.md  ARCHITECTURE.md  DEVELOPER-WORKFLOWS.md  DOCUMENTATION.md  PURPOSE.md  README.md  TECH-STACK.md  USER-EXPERIENCE.md  gate.js  index.html  pyproject.toml  reproducibility.html  run.sh
.agents/agents-md-detail/: project-navigation.md
.agents/scripts/: publish-to-github.sh
analysis/: classify_assist_other.py  count_states.py  crossindex.py  deduplicate_audit_logs.py  manual_mappings.csv  normalize_orgs.py
data/: README.md
data/ice-287g/: ice-287g-deduped.csv  ice-287g-official-list.md
data/sppd-foaa-2026-audit-logs/: .governance.py  Combined Audit Logs - Apr 25 through Mar 26.csv  README.md  Shared Networks + 287g.csv
docs/plans/: github-pages-site.md
docs/swain-retro/: 2026-05-27-github-pages-site.md
facts/: 107-cross-agency.html  2000-searches.html  44-states.html  602-agencies.html  70-ice-collaborators.html  nearly-two-thirds.html
methodology/: 287g-crossindex.html  assist-classification.html  deduplication.html  overview.html  state-counting.html
outputs/: README.md
outputs/assist-other-agencies/: METHODOLOGY.md  README.md  assist-other-agencies.csv
outputs/audit-logs-deduplicated/: .governance.py  README.md  sopo-flock-audit-deduped.csv
outputs/excel-methodology/: README.md  build_pdf.py  build_workbook.py  sppd-287g-crossindex-methodology.xlsx
scripts/governance/: __init__.py  (+10 more)
site/: .eleventy.js  encrypt-site.js  gate.css  index.njk  package.json  reproducibility.njk  test.sh
(+41 files in other folders)
